# nevara-python-sdk

./: README.md  pyproject.toml
examples/: default_assistant_stream.py  default_assistant_sync.py
scripts/: bump_version.py
src/nevara/: __init__.py  client.py  errors.py  models.py
tests/: test_default_assistant.py
